--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,13 +9,13 @@
     <div class="item-img-content">
 <%= image_tag @item.image, class: "item-box-img" if @item.image.attached? %>
 
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <% if @item.sold_out? %>
+      
+      <%# if @item.sold_out? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <% end %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <%# end %>
+
 
     </div>
     <div class="item-price-box">
@@ -27,28 +27,27 @@
       </span>
     </div>
 
-    <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-
+    
   <% if user_signed_in? %>
-  <p>ユーザーがログインしています。</p>
+
     <% if current_user == @item.user %>
-  <p>出品者本人です。</p>
+
     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
    <% else %>
-   <p>出品者本人ではありません。</p>
-   <% if !@item.sold_out? %>
-   <p>商品は売り切れていません。購入ボタンを表示します。</p>
+
+   <%# if !@item.sold_out? %>
+
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-        <% else %>
-      <p>商品は売り切れています。</p>
+     <%# else %>
+
     <% end %>
-  <% end %>
+  <%# end %>
 <% end %>
-    <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
+
 
     <div class="item-explain-box">
       <span><%= "商品説明" %></span>
@@ -116,9 +115,9 @@
       後ろの商品 ＞
     </a>
   </div>
-  <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
-  <a href="#" class="another-item"><%= "商品のカテゴリー名" %>をもっと見る</a>
-  <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
+ 
+  <a href="#" class="another-item"><%= @item.category_information.name %>をもっと見る</a>
+
 </div>
 
 <%= render "shared/footer" %>
