--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,17 +31,19 @@
   <% if user_signed_in? %>
 
     <% if current_user == @item.user %>
-
+     
+     <% unless @item.sold_out? %>
     <%= link_to "商品の編集", edit_item_path() , method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", item_path, data: {turbo_method: :delete}, class:"item-destroy" %>
-   <% else %>
+    <% end %>
+    <% else%>
 
    <% if !@item.sold_out? %>
 
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
+    
     <%= link_to "購入画面に進む", item_orders_path(@item) , data: { turbo: false }, class:"item-red-btn"%>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
+    
      <% else %>
 
     <% end %>
